solc_ossfuzz_seed_corpus/test_sol/test_28c52402c028625141c99eb7fc6e6ea841752940fbdea4bc038ed0646e2829f8_e46541c804790cbe99eda49d020b748599c1b889_sol.sol
==== Source:  ====

==== Source: su0.sol ====
struct St0 {
  address payable el0;
  bytes16 el1;
}
pragma solidity >= 0.0.0;
library L0 {
  function f0(int240 i0) public   
  {
    string memory l0 = string("ffffffffffffffffffffffffffffffffffffffffffffffb89c111acf081e6b1371d577805776b095dde4b5f778364246a32a90a586e41e");
    {
      function (bytes24, function (bool[][3][3] memory, int192, bytes23) internal  ) internal   returns (bytes18) l1;
      assembly
      {
        calldatacopy(add(0x80, mod(mload(add(0x80, mod(i0, 2048))), 1024)), i0, mod(i0, 1024))
        function af0(ai0, ai1, ai2, ai3, ai4, ai5, ai6) -> ao0, ao1, ao2, ao3, ao4, ao5, ao6, ao7, ao8, ao9, ao10, ao11
        {
          let al0 := ai6
          return(add(0x80, mod(mload(add(0x80, mod(i0, 2048))), 1024)), 0)
        }
        sstore(mulmod(115792089237316195423570985008687907853269984665640564039457584007913129639935, 0, 115792089237316195423570985008687907853269984665640564039457584007913129639935), mload(add(0x80, mod(mload(add(0x80, mod(i0, 2048))), 1024))))
        i0 := 0
        for 
        { let yulinit0 := 0 } lt(yulinit0, mod(address(), 11)) { yulinit0 := add(yulinit0, 1) }
        {
          continue
        }
      }
      function (bytes26, bool) external   returns (bytes3) l2;
    }
  }
  event ev0(bool  ep0, string indexed ep1);
}
// ----
// DeclarationError 6578: (su0.sol:724-726): Cannot access local Solidity variables from inside an inline assembly function.
